<resources>
    <string-array name="reader_theme_text">
        <item>Light</item>
        <item>Dark</item>
        <item>Parchment</item>
    </string-array>
    <string-array name="theme_text">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="viewmode_text">
        <item>@string/view_mode_paging</item>
        <item>@string/view_mode_continuous</item>
    </string-array>
    <string name="drawer_open" translatable="false">Loading Book</string>
    <string name="drawer_close" translatable="false">Loading Book</string>
    <string name="loading_book">Loading Book</string>
    <string name="Theme_Parchment" translatable="false">Parchment</string>
    <string name="open_file">Open File</string>
    <string name="catalog_home">Home</string>
    <string name="book_toc">TOC</string>
    <string name="search">Search</string>
    <string name="book_rename">Rename</string>
    <string name="book_open">Open</string>
    <string name="book_delete">Delete</string>
    <string name="my_readings">My Readings</string>
    <string name="search_local">Local Search&#8230;</string>
    <string name="search_book">Book Search&#8230;</string>
    <string name="view_mode_continuous">Continuous View</string>
    <string name="view_mode_paging">Paging View</string>
    <string name="pref_rotate_title">Rotate</string>
    <string name="pref_rotate_summary">Allow screen rotate</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_storagepath_title">Sync Folder</string>
    <string name="pref_storagepath_summary">No \'Sync Folder\' selected</string>
    <string name="pref_volume_title">Volume Keys Turning</string>
    <string name="pref_volume_summary">Use volume keys to turn pages</string>
    <string name="continue_reading">Continue reading from:</string>
    <string name="sync_conflict">Sync conflict</string>
    <string name="view_mode">View Mode</string>
    <string name="image_original_size">Original Size</string>
    <string name="image_fit_to_screen">Fit To Screen</string>
    <string name="image_original_size_all_images">Original Size All Images</string>
    <string name="image_fit_to_screen_all_images">Fit To Screen All Images</string>
    <string name="keep_reading_position">Keep Position</string>
    <string name="add_more_fonts_to">Add more fonts to \'%s\'</string>
    <string name="controls_fullscreen">Fullscreen</string>
    <string name="controls_navigate">Navigate</string>
    <string name="controls_nextpage">Next page</string>
    <string name="controls_prevpage">Previous page</string>
    <string name="controls_brightness">Brightness</string>
    <string name="per_second">/s</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="bookmark_edit">Edit</string>
    <string name="book_font">Font</string>
    <string name="sort_by">Sort By ...</string>
    <string name="sort_by_name_a_z">Name A-Z</string>
    <string name="sort_by_name_z_a">Name Z-A</string>
    <string name="sort_by_added_asc">Added Asc</string>
    <string name="sort_by_added_desc">Added Desc</string>
    <string name="sort_by_opened_asc">Opened Asc</string>
    <string name="sort_by_opened_desc">Opened Desc</string>
    <string name="pref_tts_title">TTS Language</string>
    <string name="app_name">Pellego</string>
    <string name="title_library" translatable="false">Library</string>
    <string name="title_empty_library" translatable="false">Such empty..</string>
    <string name="title_learn_nav">Learn</string>
    <string name="title_learn">Learning Modules</string>
    <string name="title_progress">Progress</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="title_settings">Settings</string>
    <string name="title_quiz">Quiz</string>
    <string name="title_quiz_results">Results</string>
    <string name="title_clump_reading">Clump Reading</string>
    <string name="title_meta_guiding">Meta Guiding</string>
    <string name="title_technique">Technique Overview</string>
    <string name="title_reducing_subvocalization">Reducing Subvocalization</string>
    <string name="title_profile">Profile</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="submodule_popup_dialog">Read the words as they are displayed on the screen. After all the
        words have been displayed, you will be tested on your comprehension. Good luck!</string>
    <string name="quiz_popup_dialog">Now you will be tested on your
        comprehension. Good luck!</string>
    <string name="title_module_intro">Intro</string>
    <string name="title_module_beginner">Beginner</string>
    <string name="title_module_intermediate">Intermediate</string>
    <string name="title_module_advanced">Advanced</string>
    <string name="descr_module_intro">Learn the benefits</string>
    <string name="descr_module_beginner">Demonstrate basic skills</string>
    <string name="descr_module_intermediate">Show some improvement</string>
    <string name="descr_module_advanced">Prove your mastery</string>
    <string name="title_rsvp_intro">Rapid Serial Visual Presentation Introduction</string>
    <string name="title_rsvp">Rapid Serial Visual Presentation</string>
    <string name="description_rsvp">Rapid Serial Visual Presentation is a method in which individual words are displayed in rapid succession. The words are fixed to the same
                point on the screen which eliminates the need for saccades. This means your eyes can remain fixed while the words change."</string>
    <string name="content_rsvp_beginner">I just returned from the greatest summer vacation in Paris, France! I spent eight days
        there with my best friends, Henry and Steve. We visited many famous tourist places and my favorite was the Louvre,
        a well-known museum.</string>
    <string name="content_rsvp_intermediate">Keith recently came back from a trip to Chicago, Illinois. This midwestern metropolis is found along the shore of Lake Michigan. During his visit, Keith spent a lot of time exploring the city to visit important landmarks and monuments.
Keith loves baseball, and he made sure to take a visit to Wrigley Field. Not only did he take a tour of this spectacular stadium, but he also got to watch a Chicago Cubs game. In the stadium, Keith and the other fans cheered for the Cubs. Keith was happy that the Cubs won with a score of 5-4.
Chicago has many historic places to visit. Keith found the Chicago Water Tower impressive as it is one of the few remaining landmarks to have survived the Great Chicago Fire of 1871. Keith also took a walk through Jackson Park, a great outdoor space that hosted the World’s Fair of 1892. The park is great for a leisurely stroll, and it still features some of the original architecture and replicas of monuments that were.
During the last part of his visit, Keith managed to climb the stairs inside of the Willis Tower, a 110-story skyscraper. Despite the challenge of climbing the many flights of stairs, Keith felt that reaching the top was worth the effort. From the rooftop, Keith received a gorgeous view of the city’s skyline with Lake Michigan in the background.</string>
    <string name="content_rsvp_advanced">It goes without saying that humans (mammals identifiable as those that stand upright and are comparatively advanced and capable of detailed thought) have pretty remarkable bodies, given all that theyve accomplished. (Furthermore, an especially intelligent human brain produced this text!) To be sure, humans have overcome predators, disease, and all sorts of other obstacles over thousands of years.
To fully understand and appreciate these accomplishments, lets take at some of the most well-known parts of the human body!
The head, or the spherical body part that contains the brain and rests at the top of the human body, has quite a few individual organs and body parts on it. (It should quickly be mentioned that hair occupies the space on top of the head, and the ears, the organs responsible for hearing, are located on either side of the head.) From top to bottom, the eyebrows, or horizontal strips of hair that can be found above the eye, are the first components of the head. The eyes are below them, and are round, orb-like organs that allow humans to see.
The eyes make way for the nose, or an external (sticking-out) organ that plays an important part in the breathing and bacteria-elimination processes. Below that is the mouth, or a wide, cavernous organ that chews food, removes bacteria, helps with breathing, and more. The mouth contains teeth, or small, white-colored, pointed body parts used to chew food, and the tongue, or a red-colored, boneless organ used to chew food and speak.
The neck is the long body part that connects the head to the chest (the muscular body part that protects the heart and lungs), and the stomach, or the part of the body that contains food and liquid-processing organs, comes below that.
The legs are the long, muscular body parts that allow humans to move from one spot to another and perform a variety of actions. Each leg contains a thigh (a thick, especially muscular body part used to perform strenuous motions; the upper part of the leg) and a calf (thinner, more flexible body part that absorbs the shock associated with movement; the lower part of the leg). Feet can be found at the bottom of legs, and each foot is comprised of five toes, or small appendages that help balance.
Arms are long, powerful body parts that are located on either side of chest, below the shoulders;arms are comprised of biceps (the thicker, more powerful upper portion), and forearms (the thinner, more flexible lower portion). Hands, or small, gripping body parts used for a tremendous number of actions, are at the end of arms. Each hand contains five fingers, or small appendages used to grip objects.
The aforementioned shoulders are rounded body parts that aid arms\' flexibility. One\'s back is found on the opposite side of the stomach, and is a flat section of the body that contains important muscles that\'re intended to protect the lungs and other internal organs, in addition to helping humans perform certain motions and actions.</string>
    <string-array name="intro_rsvp_header">
        <item>What is RSVP?</item>
        <item>What does RSVP allow?</item>
        <item>How does RSVP help?</item>
        <item>How is RSVP utilized?</item>
    </string-array>
    <string name="title_metaguiding_highlight">Meta-guiding highlight</string>
    <string name="description_metaguiding_highlight">The default highlight color for the meta guiding technique</string>
    <string name="title_text_size">Text size</string>
    <string name="description_text_size">The default text size displayed in the reader</string>
    <string name="default_text_size">medium</string>
    <string name="title_wpm">WPM</string>
    <string name="description_wpm">The default wpm used in the reader</string>
</resources>