<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <Preference
        android:title="@string/title_settings"
        android:key="@string/title_settings"
        android:layout="@layout/layout_preference_title" />
    <PreferenceCategory
        android:title="General">
        <ListPreference
            android:key="text_size"
            android:title="@string/title_text_size"
            android:summary="@string/description_text_size"
            android:entries="@array/text_sizes_entries"
            android:entryValues="@array/text_sizes"
            android:defaultValue="@string/default_text_size"
            />
        <SwitchPreferenceCompat
            android:key="notifications"
            app:title="Enable message notifications"
            android:summary="enable/disable push notifications"
            />

        <SeekBarPreference
            android:id="@+id/seekBar"
            android:key="default_wpm"
            android:title="@string/title_wpm"
            android:summary="@string/description_wpm"
            android:max="700"
            android:defaultValue="280"
            app:showSeekBarValue="true"
            />



    </PreferenceCategory>

    <PreferenceCategory
        android:title="Meta Guiding">
        <ListPreference
            android:key="metaguiding_highlight_color"
            android:title="@string/title_metaguiding_highlight"
            android:summary="@string/description_metaguiding_highlight"
            android:entries="@array/text_sizes_entries"
            android:entryValues="@array/text_sizes"
            android:defaultValue="@string/default_text_size"
            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Miscellaneous">
        <Preference
            android:key="feedback"
            app:title="Send feedback"
            android:summary="Report technical issues or suggest new features"/>

    </PreferenceCategory>

</PreferenceScreen>