<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_library">

    <fragment
        android:id="@+id/nav_library"
        android:name="com.example.pellego.ui.library.LibraryFragment"
        android:label="@string/title_library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_nav_library_to_nav_learn"
            app:destination="@id/nav_learn" />
    </fragment>

    <fragment
        android:id="@+id/nav_learn"
        android:name="com.example.pellego.ui.learn.LearnFragment"
        android:label="@string/title_learn"
        tools:layout="@layout/fragment_learn" >
        <action
            android:id="@+id/action_nav_learn_to_nav_module_overview"
            app:destination="@id/nav_module_overview" />
        <action
            android:id="@+id/action_nav_learn_to_nav_progress"
            app:destination="@id/nav_progress" />
        <action
            android:id="@+id/action_nav_learn_to_nav_library"
            app:destination="@id/nav_library" />
    </fragment>

    <fragment
        android:id="@+id/nav_progress"
        android:name="com.example.pellego.ui.progress.ProgressFragment"
        android:label="@string/title_progress"
        tools:layout="@layout/fragment_progress" >
        <action
            android:id="@+id/action_nav_progress_to_nav_settings"
            app:destination="@id/nav_settings" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.pellego.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_technique"
        android:name="com.example.pellego.ui.rsvp.RsvpOverviewFragment"
        android:label="@string/title_technique"
        tools:layout="@layout/fragment_terms_and_conditions" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.pellego.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_terms_and_conditions"
        android:name="com.example.pellego.ui.termsAndConditions.TermsAndConditionsFragment"
        android:label="@string/title_terms_and_conditions"
        tools:layout="@layout/fragment_terms_and_conditions" />

    <fragment
        android:id="@+id/nav_module_overview"
        android:name="com.example.pellego.ui.rsvp.RsvpOverviewFragment"
        android:label="@string/title_technique"
        tools:layout="@layout/fragment_rsvp_module">
        <action
            android:id="@+id/action_nav_module_overview_to_nav_learn"
            app:destination="@id/nav_learn" />
    </fragment>

    <fragment
        android:id="@+id/nav_rsvp_intro"
        android:name="com.example.pellego.ui.rsvp.RsvpIntroFragment"
        android:label="@string/title_rsvp_intro"
        tools:layout="@layout/fragment_rsvp_intro" />

    <fragment
        android:id="@+id/nav_rsvp_beginner"
        android:name="com.example.pellego.ui.rsvp.RsvpModuleFragment"
        android:label="@string/title_rsvp_beginner"
        tools:layout="@layout/fragment_rsvp_module" />

    <fragment
        android:id="@+id/nav_quiz"
        android:name="com.example.pellego.ui.quiz.QuizFragment"
        android:label="@string/title_rsvp_beginner"
        tools:layout="@layout/fragment_rsvp_module" />

</navigation>